[gd_scene load_steps=8 format=3 uid="uid://dg5s1ct70u6pa"]

[ext_resource type="Script" path="res://TopDownShooter/TopDownShooter/scripts/ui.gd" id="1_pirs2"]
[ext_resource type="Theme" uid="uid://cffeqcknwvps6" path="res://funny.tres" id="2_5ga7r"]
[ext_resource type="Texture2D" uid="uid://damq21vryl1ui" path="res://TopDownShooter/TopDownShooter/Sprites/target.png" id="3_3wc68"]
[ext_resource type="Texture2D" uid="uid://di3s4kdtkdtdw" path="res://TopDownShooter/TopDownShooter/ui/progress_bar/bg.png" id="4_arwnm"]
[ext_resource type="Texture2D" uid="uid://gcpmqj35x8t6" path="res://TopDownShooter/TopDownShooter/ui/grenade.png" id="4_tui8n"]
[ext_resource type="Texture2D" uid="uid://cxb14vqgeqdbj" path="res://TopDownShooter/TopDownShooter/ui/progress_bar/over.png" id="5_l0367"]
[ext_resource type="Texture2D" uid="uid://cna3hwb5au55r" path="res://TopDownShooter/TopDownShooter/ui/progress_bar/progress.png" id="6_bsq4x"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pirs2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -133.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_5ga7r")
text = "QUIT"

[node name="TargetCounter" type="MarginContainer" parent="."]
offset_left = 33.0
offset_top = 13.0
offset_right = 179.0
offset_bottom = 64.0
scale = Vector2(1.71107, 1.32026)

[node name="HBoxContainer" type="HBoxContainer" parent="TargetCounter"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TextureRect" type="TextureRect" parent="TargetCounter/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_3wc68")
expand_mode = 3

[node name="Label" type="Label" parent="TargetCounter/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_5ga7r")
theme_override_font_sizes/font_size = 22
text = "0"

[node name="grenadeUI" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="grenadeUI"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="grenadeUI/HBoxContainer"]
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_vertical = 4
value = 66.0
show_percentage = false

[node name="AmmoCount" type="Label" parent="grenadeUI/HBoxContainer/ProgressBar"]
layout_mode = 2
offset_left = 65.0
offset_top = -27.0
offset_right = 82.0
offset_bottom = -7.0
size_flags_vertical = 8
theme = ExtResource("2_5ga7r")
theme_override_font_sizes/font_size = 22
text = "0"

[node name="TextureProgressBar" type="TextureProgressBar" parent="grenadeUI/HBoxContainer"]
layout_mode = 2
value = 50.0
texture_under = ExtResource("4_arwnm")
texture_over = ExtResource("5_l0367")
texture_progress = ExtResource("6_bsq4x")

[node name="TextureRect" type="TextureRect" parent="grenadeUI/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_tui8n")
expand_mode = 2

[node name="XpProgressBar" type="ProgressBar" parent="."]
offset_left = 361.0
offset_top = 17.0
offset_right = 856.0
offset_bottom = 44.0

[node name="Level" type="Label" parent="XpProgressBar"]
layout_mode = 0
offset_left = 226.0
offset_top = 33.0
offset_right = 265.0
offset_bottom = 77.0
size_flags_vertical = 8
theme = ExtResource("2_5ga7r")
text = "0"

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
